@@ -1,5 +1,7 @@
 1.3.8 - TBD
 
+* The scene/world directory selection dialogs now indicate if a valid
+  directory is selected.
 * Added button to scale canvas width/height by 1.5.
 * Replaced the preview window scaling buttons with a drop-down list.
 * Added Entities tab in the Render Controls dialog, allowing posing and
